# primo-backend

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
app/: config.py  default_prompt.py  logging_config.py  main.py
app/middleware/: content_type.py  cors.py  exception_handler.py  logging.py
app/models/: config_models.py  rag_models.py  session.py
app/routers/: chat.py  health.py  knowledge.py  session.py
app/services/: embed_service.py  knowledge_loader.py  llm_service.py  persistence_service.py  rag_service.py  session_service.py
knowledge/: README.md  SI-COMPANY-OVERVIEW.txt
knowledge/AI Scents/: AI SCENTS CAPTIONS.docx  AI SCENTS GUIDE.txt  AI-SCENTS-PRODUCT-GUIDE.txt
knowledge/Ashi Supreme/: ASHI-SUPREME-PRODUCT-GUIDE.txt  CAPTIONS-ASHI SUPREME.docx
knowledge/KB-Final/: AA_KNOWLEDGE_BASE.txt
knowledge/KB-New/: Ai Scents.txt  Ashi Supreme.txt  Maison Supreme.txt  Supremacy International - Company and Business.txt  Supreme Alkaline Coffee.txt  Supreme C.txt  Supreme Glow Soap.txt  Supreme Radiance Soap.txt
knowledge/Maison Supreme/: MAISON-SUPREME-PRODUCT-GUIDE.txt
knowledge/Supreme Alkaline Coffee/: CAPTIONS-SUPREME FIT COFFEE.docx  SUPREME-FIT-COFFEE-PRODUCT-GUIDE.txt
tests/: test_config_validation.py  test_content_type_middleware.py  test_health.py  test_integration.py  test_knowledge_router.py  test_llm_service.py  test_pbt_rag.py  test_pbt_security.py  test_pbt_session.py  test_pbt_streaming.py  test_rag_service.py  test_session_router.py  test_session_service.py
(+362 files in other folders)
